--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
@@ -13,5 +14,10 @@
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "typescript": "^4.7.2"
   }
 }
